--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "description": "webpack from scratch",
   "scripts": {
-    "build": "webpack --mode=development"
+    "server": "json-server -p3001 --watch db.json",
+    "build": "webpack --mode=production",
+    "start": "webpack serve --mode=development"
   },
   "license": "MIT",
   "devDependencies": {
@@ -12,11 +14,14 @@
     "@babel/preset-react": "^7.22.15",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "json-server": "^0.17.4",
     "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "core-js": "^3.32.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
